--- a/lesson_01/code/example_01/lesson_01/homework/about.html
+++ b/lesson_01/code/example_01/lesson_01/homework/about.html
@@ -27,7 +27,7 @@
         <li>walk at 20 am</li>
     </ol>
     <a href="./index.html">Перейти на главную страничку</a>
-    <img src="images/dog.avif" width="900px" height="400px">
+    <img src="./images/dog.avif" width="900px" height="400px">
 
 
 
