--- a/lesson_04/code/Homework04_01/index.html
+++ b/lesson_04/code/Homework04_01/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div>
-   <div> <h1 class="header">Header</h1></div>
-    <div><h1 class="main">Main</h1></div>
-    <div><h1 class="folder">Folder</h1></div>
+   <div class="header">Header</div>
+    <div class="main">Main</div>
+    <div class="footer">Footer</div>
     </div>
 </body>
 </html>
