--- a/lesson_07/example01/index.html
+++ b/lesson_07/example01/index.html
@@ -41,7 +41,9 @@
                         пользоваться невероятной популярностью.</p>
                 </div>
 
+             </div>
             </div>
+
             <div class="box3 box">3
                 <div class="text">romance</div>
                 <div class="block">
@@ -55,6 +57,7 @@
                             Дженни всегда его поддерживала и защищала, но вскоре дороги их разошлись.</p>
                     </div>
                 </div>
+            </div>
                 <div class="box4 box">4
                     <div class="text">fantasy</div>
                     <div class="block">
@@ -68,6 +71,7 @@
                                 Тихиро должна придумать, как избавить своих родителей от чар коварной старухи.</p>
                         </div>
                     </div>
+                </div>
                     <div class="box5 box">5
                         <div class="text">crime</div>
                         <div class="block">
@@ -80,6 +84,7 @@
                                     страшном преступлении, стал одним из самых необычных обитателей блока..</p>
                             </div>
                         </div>
+                    </div>
                         <div class="box6 box">6
                             <div class="text">thriller</div>
                             <div class="block">
