--- a/lesson_07/example01/index.html
+++ b/lesson_07/example01/index.html
@@ -12,7 +12,7 @@
     <div class="cinema">
 
         <div class="box1 box">1
-            <div class="text">drama</div>
+            <div class="text">Drama</div>
             <div class="block">
                 <div class="year">2011</div>
                 <div class="title">1+1</div>
@@ -26,7 +26,7 @@
 
         </div>
         <div class="box2 box">2
-            <div class="text">thriller</div>
+            <div class="text">Thriller</div>
             <div class="block">
                 <div class="year">1999</div>
                 <div class="title">Бойцовский клуб</div>
@@ -45,7 +45,7 @@
             </div>
 
             <div class="box3 box">3
-                <div class="text">romance</div>
+                <div class="text">Romance</div>
                 <div class="block">
                     <div class="year">1994</div>
                     <div class="title">Форрест Гамп</div>
@@ -59,7 +59,7 @@
                 </div>
             </div>
                 <div class="box4 box">4
-                    <div class="text">fantasy</div>
+                    <div class="text">Fantasy</div>
                     <div class="block">
                         <div class="year">2001</div>
                         <div class="title">Унусенные Призраками</div>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                     <div class="box5 box">5
-                        <div class="text">crime</div>
+                        <div class="text">Crime</div>
                         <div class="block">
                             <div class="year">1999</div>
                             <div class="title">Зеленая миля</div>
@@ -86,10 +86,10 @@
                         </div>
                     </div>
                         <div class="box6 box">6
-                            <div class="text">thriller</div>
+                            <div class="text">Thriller</div>
                             <div class="block">
                                 <div class="year">1994</div>
-                                <div class="title">Побег из Шоушенк</div>
+                                <div class="title">Побег из Шоушенка</div>
                                 <div class="description">
                                     <p>Бухгалтер Энди Дюфрейн обвинён в убийстве собственной жены и её любовника.
                                         Оказавшись в тюрьме под названием Шоушенк, он сталкивается с жестокостью и
