--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -5,7 +5,7 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link rel="stylesheet" href="./styles/style.css">
-    <script src="./main.js" defer></script>
+    <script src="./main2.js" defer></script>
     <title>ToDo</title>
 </head>
 <body>
@@ -21,9 +21,7 @@
       <button class="btn" id="uncompleted">невыполненные</button>
     </div>
     <ul class="list">
-        <!-- <li class="list-item list-item_done">Сделать домашку</li>
-        <li class="list-item" id="second-item">Повторить</li>
-        <li class="list-item">Купить молоко</li> -->
+        
       
     </ul>
 </main>
